Rewrite JSON/XML parsers, remove jackson-dataformat-xml; set version to 1.2
Replace JsonResourceBundle streaming token parser with ObjectMapper tree
model and XMLResourceBundle Jackson XML parser with standard DOM API,
eliminating the jackson-dataformat-xml dependency. Remove XMLStreamException
from public API.